force-app/main/default/objects/ampi__Thematic_Area__c/ampi__Thematic_Area__c.object-meta.xml
<CustomObject>
    <description>Thematic tag</description>
    <label>Thematic Area</label>
    <nameField>
        <label>Thematic Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thematic Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>