force-app/main/default/objects/ampi__Thematic_Area__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>