force-app/main/default/objects/ampi__Thematic_Area__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to specify if the thematic area is active</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>