force-app/main/default/objects/ampi__Thematic_Area__c/fields/ampi__Description_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description_Language_2__c</fullName>
    <description>Secondary translated version of Description__c.</description>
    <label>Description Language 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>