force-app/main/default/objects/ampi__Thematic_Area__c/fields/ampi__Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Icon__c</fullName>
    <description>This text field is used to store the ID of thematic area icon from icons catalog</description>
    <inlineHelpText>Save the record first before filling in this field. Once the record is created/saved, click the button &quot;Open Icons Catalog&quot; to view and copy the ID of the icon into this field.</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>