force-app/main/default/objects/ampi__Thematic_Area__c/fields/ampi__Name_Language_3__c.field-meta.xml
<CustomField>
    <fullName>ampi__Name_Language_3__c</fullName>
    <description>Tertiary translated version of Name.This value is printed in Name_Translated__c when USER_LANGUAGE_CODE = 3.</description>
    <label>Thematic Area Language 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>