force-app/main/default/objects/ampi__Thematic_Area__c/fields/ampi__Parent_Theme__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field specifies the parent thematic area</description>
    <label>Parent Theme</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>Related Thematic Areas</relationshipLabel>
    <relationshipName>Thematic_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>