force-app/main/default/objects/ampi__Thematic_Area__c/fields/ampi__Thematic_Area_Icon_and_Text__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Icon_and_Text__c</fullName>
    <description>Concatenation of Icon and Name field, used to populate on Other Target Objects</description>
    <formula>ampi__Icon__c + &apos;#&apos; + ampi__Name_Translated__c</formula>
    <label>Thematic Area Icon and Text</label>
    <type>Text</type>
</CustomField>