force-app/main/default/objects/ampi__Thematic_Area__c/fields/Unique__c.field-meta.xml
<CustomField>
    <fullName>Unique__c</fullName>
    <externalId>true</externalId>
    <label>Unique</label>
    <type>AutoNumber</type>
</CustomField>