force-app/main/default/objects/ampi__Thematic_Area__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>