force-app/main/default/objects/ampi__Thematic_Area__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>Cluster__c</columns>
    <columns>NAME</columns>
    <columns>ampi__Description__c</columns>
    <columns>ampi__Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unique_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>